# red_agent

./: .env  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.mini-claude-code/: agent.db
docs/: README.md  agent-loop.md  architecture-improvement-report.md  architecture.md  architecutre_problem.md  checkpoint-storage-evolution.md  context.md  engineering-development-plan.en.md  engineering-development-plan.md  overview.md  prompt-runtime-contract.md  red-team-agent-architecture-v2.md  red-team-agent-feasibility.md  red-team-agent-implementation-plan-v2.md  red-team-agent-schema-v2.md  security.md  skill-system-standard.md  task-runtime.md  tools.md
src/: ARCHITECTURE.md  README.md  SYSTEM_PROMPT.md  main.py  test.py  test_run_observability.py
test/: commandAgent.py  langChainAgent.py  langChainTest.py
tests/: test_agent_loop.py  test_checkpoint_cli.py  test_checkpoint_runtime_phase_c.py  test_checkpoint_service.py  test_cli_ui.py  test_evidence_export.py  test_evidence_repository.py  test_explicit_skill_activation.py  test_finding_evidence_link_repository.py  test_finding_repository.py  test_finding_service.py  test_job_service.py  test_local_skill_support.py  test_main_cli.py  test_memory_repository.py  test_operation_event_service.py  test_operation_service.py  test_provider.py  test_red_team_phase1.py  test_red_team_phase2.py  test_red_team_phase3.py  test_redteam_cli.py  test_redteam_public_ids.py  test_redteam_ui.py  test_run_observability.py  test_run_service_and_runner.py  test_scheduler_runtime.py  test_scope_validator.py  (+11 more)
(+141 files in other folders)
